# TracTicketMSTeamsDispatcherPlugin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yml
LICENSES/: LicenseRef-Trac.txt
ttmsd/: __init__.py  admin.py  api.py  core.py  model.py  utils.py
ttmsd/htdocs/: ttmsd.css  ttmsd.js
ttmsd/templates/: discord_payload.html  msteams_dispatcher_admin.html  msteams_dispatcher_payload_admin.html  teams_payload.html
