# SPDX-FileCopyrightText: 2022 The TracTicketMSTeamsDispatcherPlugin Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later
[metadata]
name = TracTicketMSTeamsDispatcher
author = Markus Rosjat
email = markus.rosjat@gmail.com
url = https://github.com/rosjat/TracTicketMSTeamsDispatcherPlugin
description = Send a message on ticket creation or update to a MS Teams channel
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-2.1
license_file = LICENSE
license_files =
    LICENSES/*

[options]
package_source =
    = ttmsd
packages = find:
install_requires =
    requests
    Trac>=1.5

[options.packages.find]
exclude =
    tests/*

[options.package_data]
ttmsd =
    templates/*.html
    htdocs/*.js

[options.entry_points]
trac.plugins =
        TracTicketMSTeamsDispatcher.admin = ttmsd.admin
        TracTicketMSTeamsDispatcher.api = ttmsd.api

[egg_info]
tag_build = dev

[options.extras_require]
dev =
    isort
    mypy
    pre-commit
    pytest
    pytest-mypy
    setuptools>=42
    setuptools_scm[toml]>=3.4
    wheel
